apps/ingress-routes/argo-workflow.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argoworkflow-server-ingress
  namespace: argo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argoworkflow.master-node.com`)
      kind: Rule
      services:
        - name: argo-workflow-argo-workflows-server
          port: 2746
