apps/ingress-routes/grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argoworkflow-server-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.master-node.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
